# BassSynth

./: CMakeLists.txt  README.md  Ver1.1_CPU最適化_提案.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: WavetableOscillator.h
Source/Logic/: BassSynthVoice.h  FactoryPresets.h  FormulaParser.h  Lfo.h  PolyVoiceManager.h
Source/UI/: PresetBrowser.h  WavetableBrowser.h
